# gertrude

./: .gitignore  gertrude  gertrude.py  gt  pyproject.toml
conf/: packages.json
src/: greet_command.py
src/install/: install.py
src/install/installers/: installer.py  package_installer.py  ubuntu_installer.py
