[tool.poetry]
name = "gertrude"
version = "0.0.1"
description = "My command line utilities"
authors = ["Tyler Kuipers <tkuipers123@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
